# app-framework_demo

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: boot-probe.yaml  build.yaml  v3-readiness.yaml
app/: __init__.py  api_types.py  asset_mapper.py  asset_mapper_v2.py  client.py  connector.py  contracts.py  credentials.py  handler.py  run_dev.py  typedefs_v2.py
contract/: PklProject  PklProject.deps.json  app.pkl
docs/typedefs/: GitHub.pkl  preview_output.txt
frontend/static/: .gitkeep
helm/atlan-github-app/: Chart.yaml  values.yaml
helm/atlan-github-app/templates/: _helpers.tpl  handler-deployment.yaml  worker-deployment.yaml  worker-scaledobject.yaml
scripts/: dry_run.py  dry_run_offline.py  typedef_audit.py  v2_preview.py
tests/e2e/: README.md  RUN_LIVE.md  test_github_app.py  test_replay.py
tests/e2e/histories/: .gitkeep
tests/fixtures/content/: catalog.yaml  ci_workflow.yaml  wiki_catalog_page.md  wiki_plain_page.md
tests/fixtures/github_api/: orgs_repos.json  repos_multiscenario.json  tree_yaml.json  user.json
tests/integration/: test_boot_probe.py  test_e2e_replay.py
tests/unit/: test_asset_mapper.py  test_asset_mapper_v2.py  test_client.py  test_content_modes.py  test_contracts.py  test_credentials.py  test_multirepo.py
