[project]
name = "atlan-github-app"
version = "0.1.0"
description = "Atlan native app — GitHub connector (REST extraction pattern)"
requires-python = ">=3.11"
authors = [{ name = "Greg Martell", email = "greg.martell@atlan.com" }]
readme = "README.md"
license = { text = "Apache-2.0" }

dependencies = [
    # SDK pinned per v3-readiness §1. No 'sql' extra needed (REST connector).
    "atlan-application-sdk==3.4.0",
    "httpx>=0.27,<0.29",
    "pydantic>=2.7,<3",
    "pyatlan-v9>=2.0,<3",
    # Git operations for wiki cloning (v3 compliance rule 11)
    "GitPython>=3.1,<4",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "respx>=0.21",            # httpx mocking for E2E replay tests
    "ruff>=0.5",
    "pyright>=1.1.370",
    "poethepoet>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ---------------------------------------------------------------------------
# Linting / type-checking — _input.py is generated; exclude per contract skill
# ---------------------------------------------------------------------------
[tool.ruff]
exclude = ["app/generated/_input.py"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "ASYNC"]
ignore = ["E501"]  # long lines OK (mostly docstrings)

[tool.pyright]
exclude = [".github/**", "app/generated/_input.py"]
reportMissingImports = "warning"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: integration tests that need a live or replayed GitHub backend",
    "boot_probe: full handler/worker boot test",
]

# ---------------------------------------------------------------------------
# Poe — task runner; matches the contract skill's expected layout
# ---------------------------------------------------------------------------
[tool.poe.tasks]
# Generate workflow / credential / manifest / _input.py from contract/app.pkl.
# Run on every contract change; CI fails on `git diff` after `poe generate`.
generate.shell = "cd contract && pkl eval -m ../app/generated app.pkl && mv ../app/generated/input.py ../app/generated/_input.py"

# Static checker bundled with application-sdk — exits 0 only on full v3 compliance.
check-v3 = "python -m tools.migrate_v3.check_migration --no-color app/"

# Local boot in combined mode (handler + worker in one process). Uses
# MockSecretStore from application_sdk.testing.mocks — no Dapr needed.
dev = "python -m app.run_dev"

# Run tests.
test       = "pytest -q"
test-unit  = "pytest -q tests/unit"
test-int   = "pytest -q -m integration tests/integration"
